<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">移动课堂</string>
    <string name="hello">hello</string>
    <string name="cut_title">图片裁剪</string>
    <string name="cancel_confirm">您确定要退出吗?</string>
    <string name="photo_img_select_count">已选择%1$s张</string>
    <string name="photo_img_select_max">最多只能选择%1$s张</string>
    <string name="hint_pick_image">请选择图片</string>
    <string name="photos_title">手机相册</string>
    <string name="no_sdcard">没有插入SD卡</string>
    <string name="photograph">拍照</string>
    <string name="select_nativ_pic">选择本地图片</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="hello_html"><![CDATA[Hello <b>World</b>!]]></string>
    <string name="menu_live">直播</string>
    <string name="menu_live_course">在线课程</string>
    <string name="menu_share">共享资源</string>
    <string name="menu_annoce">通知</string>
    <string name="local_course">本地课程</string>
    <string name="local_source">本地资源</string>
    <string name="menu_download">下载任务</string>
    <string name="menu_setting">设置</string>
    <string name="hint_login_name">请输入您的帐号</string>
    <string name="hint_login_pass">请输入密码</string>
    <string name="cancel">取消</string>
    <string name="branch_sh">上海分公司</string>
    <string name="continue_download">自动完成未完成的下载</string>
    <string name="continue_when_wifi">仅在使用WIFI时续传</string>
    <string name="auto_login_when_net">联网时自动登录</string>
    <string name="login_name">登录帐号:</string>
    <string name="erase">清除</string>
    <string name="annonunceWhenDownload">每次点播和下载提醒网络类型</string>
    <string name="totalDuration">累计学习</string>
    <string name="detail">详情</string>
    <string name="chapter">章节</string>
    <string name="exam">测试</string>
    <string name="reference">资料</string>
    <string name="exam_intro">测试使用说明</string>
    <string name="mark">做记号</string>
    <string name="exam_list">试题列表</string>
    <string name="exam_notice">注：继续测试会覆盖以前的记录</string>
    <string name="test_duration">测试用时</string>
    <string name="test_correct_num">正确题目数</string>
    <string name="test_incorrect_num">错误题目数</string>
    <string name="test_correct_percent">正确率</string>
    <string name="correct_answer">正确答案: </string>
    <string name="your_answer">您的答案</string>
    <string name="net_excption">网络异常</string>
    <string name="share_resource">共享资源</string>
    <string name="img">图片</string>
    <string name="select_all">全选</string>
    <string name="doc">文档</string>
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="share_download_hint">资源下载已经开始，可以从主界面点击[下载任务] 查看进度</string>
    <string name="share_downloading_hint">该资源已经下载或正在下载，请到本地资源和下载任务中查看</string>
    <string name="del">删除</string>
    <string name="sail">启动</string>
    <string name="local_resource">本地资源</string>
    <string name="study">学习</string>
    <string name="notice">通告</string>
    <string name="file_invalid">资源无效</string>
    <string name="saving_exam_result">正在提交试卷</string>
    <string name="warn">警告</string>
    <string name="noWifi">您正在使用运营商网络连接,是否继续？</string>
    <string name="download_complete">下载完成</string>
    <string name="new_version">更新</string>
    <string name="new_version_download_Hint">发现新版本是否下载</string>
    <array name="hello">
        <item>str1</item>
        <item>str2</item>
        <item>str3</item>
    </array>

    <array name="bestFoods">
        <item>f1</item>
        <item>f2</item>
        <item>f3</item>
    </array>
    <bool name="someBoolean">true</bool>
</resources>