<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/full_main"
                style="@style/MatchParentStyle"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:padding="10dp">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:background="@drawable/white_border_bg"
                android:gravity="center_vertical">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="共享资源:"
                    android:paddingLeft="5dp"/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:background="@drawable/white_border_bg"
                android:gravity="center">

            <TextView
                    android:id="@+id/del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/del"
                    android:textColor="@color/red"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:background="@drawable/white_border_bg"
                android:gravity="center"
                android:layout_marginTop="1dp">

            <TextView
                    android:id="@+id/oper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sail"
                    android:textColor="@color/holo_blue_light"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:background="@drawable/white_border_bg"
                android:gravity="center"
                android:layout_marginTop="10dp">

            <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/holo_blue_light"/>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
