<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!--Title-->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/head_bg_red"
            android:gravity="center_vertical">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/back_icon"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:paddingLeft="20dp">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"></LinearLayout>
    </LinearLayout>

    <!--Result-->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minHeight="80dp"
            android:background="@color/gray"
            android:orientation="vertical"
            android:paddingLeft="10dp">
        <!--Row1-->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                >

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_duration"
                        android:layout_marginRight="20dp"/>

                <TextView
                        android:id="@+id/testDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2:55"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_correct_num"
                        android:layout_marginRight="20dp"/>

                <TextView
                        android:id="@+id/correctNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"/>

            </LinearLayout>
        </LinearLayout>


    <!--Row2-->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_incorrect_num"
                    android:layout_marginRight="20dp"/>

            <TextView
                    android:id="@+id/incorrectNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_correct_percent"
                    android:layout_marginRight="20dp"/>

            <TextView
                    android:id="@+id/correctPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0%"/>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

    <!--detail-->
    <ExpandableListView
            android:id="@+id/expandListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            >

            </ExpandableListView>
</LinearLayout>
